Final standard version

--- a/toDo.txt
+++ b/toDo.txt
@@ -2,3 +2,4 @@ Exercicios
 1 - Substituir as funções do Modal por uma chamada Toogle e ajustar no html
 2 - navicon substituir
 3 - Fazer uma forma de exibição do erro na tela
+4 - Se o total ficar negativo ficar na cor vermelha
